objects/nSBA__Injections__c.object
<CustomObject>
    <description>The Injections object stores information on funds provided by the borrower.</description>
    <fields>
        <fullName>nSBA__Application__c</fullName>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Injections</relationshipLabel>
        <relationshipName>Application_Injections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Creditor_Name__c</fullName>
        <description>Name of Creditor who provides Standby Debt or Cash Injection. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Name of Creditor who provides Standby Debt. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Creditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Injection_Amount__c</fullName>
        <description>The Amount of the actual injection</description>
        <inlineHelpText>The Amount of the actual injection</inlineHelpText>
        <label>Injection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Injection_Description__c</fullName>
        <description>Describe use of Injection on this loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Describe use of Injection on this loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Injection Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Injection_Other_Description__c</fullName>
        <description>Text that describes the source of the particular injection</description>
        <inlineHelpText>Text that describes the source of the particular injection</inlineHelpText>
        <label>Injection Other Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Injection_Type_Code__c</fullName>
        <description>A code that identifies the type of this injection. (e.g. cash)</description>
        <inlineHelpText>A code that identifies the type of this injection. (e.g. cash)</inlineHelpText>
        <label>Injection Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Debt_Customize_Repayment_Option__c</fullName>
        <description>Use this option if Standby Debt payment doesn&apos;t fall in four standard repayment options. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Use this option if Standby Debt payment doesn&apos;t fall in four standard repayment options. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby Debt Customize Repayment Option</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Debt_Interest_Rate__c</fullName>
        <description>Yearly interest rate applied to Standby Debt. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Yearly interest rate applied to Standby Debt. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby Debt Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Debt_Monthly_Payment_Amount__c</fullName>
        <description>Monthly payments amount that consists of principal and interest on Standby Debt. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Monthly payments amount that consists of principal and interest on Standby Debt. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby Debt Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Debt_Payment_Begin_Date__c</fullName>
        <description>Date Standby Debt Payment Begins. Complete if Standby Debt payments are postponed. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Date Standby Debt Payment Begins. Complete if Standby Debt payments are postponed. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby Debt Payment Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Debt_Payment_Date_Meets_Deadline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Standby Debt Payments are postponed so the Standby Debt is considered as Equity Injection based on current SBA SOP.  This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Standby Debt Payments are postponed so the Standby Debt is considered as Equity Injection based on current SBA SOP.  This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby Debt Payment Date Meets Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_No_Principal_Interest_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that no payment of principal or interest is to be made on Standby Debt during the term of the Loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates that no payment of principal or interest is to be made on Standby Debt during the term of the Loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Standby No Principal Interest Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Standby_Repayment_Type__c</fullName>
        <description>Standby Repayment Type defines terms of how the standby agreement will be repaid.</description>
        <inlineHelpText>Standby Repayment Type defines terms of how the standby agreement will be repaid.</inlineHelpText>
        <label>Standby Repayment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No payments</fullName>
                </value>
                <value>
                    <fullName>Interest rate only</fullName>
                </value>
                <value>
                    <fullName>Monthly payment and interest rate</fullName>
                </value>
                <value>
                    <fullName>Monthly payment, interest rate and begin date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Use_Of_Proceeds__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Of Proceeds</label>
        <referenceTo>nSBA__Use_Of_Proceeds__c</referenceTo>
        <relationshipLabel>Injections</relationshipLabel>
        <relationshipName>Use_Of_Proceeds_Injections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Injections</label>
    <nameField>
        <label>Injections Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Injections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>